Tether: Do not build TetherComponent if feature is not supported.

R=khorimoto@chromium.org

Bug: 884323
Change-Id: I86ee823ac4d22f72792baf2494b504b53aa680c2
Reviewed-on: https://chromium-review.googlesource.com/1227225
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591487}
Former-commit-id: 775d835172264ee7970002b8d45bf41fe06b400e